tests/golden/errors/class_attr_instance_shadow_write.py
class C:
    count = 0


c = C()
c.count = 5
print(c.count)
